kubernetes/catalog/librespeed/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: librespeed
  namespace: librespeed
  labels:
    app.kubernetes.io/name: librespeed
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`librespeed.int.${BASE_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: librespeed
          port: 8080
  tls:
    store:
      name: default
      namespace: traefik
